<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catselection"
    tools:context="com.example.jtoco.unite.CategorySelection">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="279dp"
        android:background="@null"
        android:contentDescription="@string/sports"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sportsbutton" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginEnd="94dp"
        android:layout_marginTop="279dp"
        android:background="@null"
        android:contentDescription="@string/movies"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moviesbutton" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginEnd="94dp"
        android:layout_marginStart="95dp"
        android:background="@null"
        android:contentDescription="@string/music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/musicbutton" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="279dp"
        android:background="@null"
        android:contentDescription="@string/animals"
        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animalbutton" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="189dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:contentDescription="@string/books"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/booksbutton" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="205dp"
        android:background="@null"
        android:contentDescription="@string/tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/tvbutton" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="110dp"
        android:background="@null"
        android:contentDescription="@string/art"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/artbutton" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/games"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        app:srcCompat="@drawable/gamesbutton" />


</android.support.constraint.ConstraintLayout>
